# mythos

./: .env  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
data/: com.mythos.Launcher.desktop  com.mythos.Launcher.metainfo.xml
mythos/: __init__.py  __main__.py
mythos/adapters/input/gtk/: application.py  view_models.py  window.py
mythos/adapters/input/gtk/dialogs/: edit_game_dialog.py  game_context_menu.py  game_settings_dialog.py
mythos/adapters/input/gtk/resources/: style.css
mythos/adapters/input/gtk/views/: downloads_view.py  game_page.py  library_view.py  login_view.py  settings_view.py
mythos/adapters/input/gtk/widgets/: download_card.py  game_card.py
mythos/adapters/output/events/: glib_bus.py
mythos/adapters/output/fakes/: __init__.py  demo_data.py  fake_auth.py  fake_cloud_saves.py  fake_download_queue.py  fake_epic_store.py  fake_event_bus.py  fake_image_cache.py  fake_runner_manager.py  fake_settings_repo.py  fake_wine_runtime.py
mythos/adapters/output/legendary/: auth_session.py  cli_wrapper.py  cloud_saves.py  core_gateway.py  epic_store.py  installed_repo.py  lock_manager.py  mappers.py  process_manager.py
mythos/adapters/output/process/: runner.py
mythos/adapters/output/runners/: __init__.py  github_runner_manager.py
mythos/adapters/output/storage/: image_cache.py  settings_json.py
mythos/adapters/output/umu/: database.py  wine_adapter.py
mythos/adapters/output/wine/: runtime.py
mythos/application/: auth.py  downloads.py  game_proton.py  install.py  launch.py  library.py  runners.py  saves.py  settings.py
mythos/config/: container.py  container_fake.py  i18n.py  paths.py
mythos/dev/: __init__.py  watcher.py
mythos/domain/: __init__.py  entities.py  events.py  exceptions.py  services.py  value_objects.py
mythos/ports/: __init__.py  input.py  output.py
po/: es.po  mythos.pot
tests/fakes/: __init__.py  fake_auth.py  fake_epic_store.py  fake_event_bus.py  fake_installed_repo.py  fake_settings_repo.py  fake_wine_runtime.py
tests/unit/: test_domain_entities.py  test_domain_services.py  test_downloads.py  test_runners.py  test_use_cases.py
