[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mythos"
version = "0.1.0"
description = "Mythos — Epic Games launcher built with Python and GTK4"
readme = "README.md"
license = { file = "COPYING" }
authors = [
    { name = "Luis Alcaras", email = "luisalcarasr@gmail.com" }
]
keywords = ["epic-games", "launcher", "gtk4", "gaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.11"

# Runtime deps.
# pycairo and pygobject require GTK4 native libs installed via the system
# package manager before running `uv sync`:
#   brew install pygobject3 gtk4 libadwaita pkg-config gobject-introspection
dependencies = [
    "legendary-gl>=0.20.34",
    "platformdirs>=4.2.0",
    "requests>=2.32.0",
    "pycairo>=1.27.0",
    "pygobject>=3.48.0",
]

[project.scripts]
mythos = "mythos.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mythos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["mythos"]
omit = ["mythos/adapters/input/gtk/*"]  # GTK code untestable headless
